test/domains/compilerErrors/contains-idxtype.good
contains-idxtype.chpl:7: error: incompatible idxType in domain.contain()
